fixed not picking the endpoint protocol from system properties